--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,9 @@
   "files.associations": {
     "iostream": "cpp",
     "iosfwd": "cpp",
-    "istream": "cpp"
+    "istream": "cpp",
+    "*.tcc": "cpp",
+    "limits": "cpp",
+    "type_traits": "cpp"
   }
 }
