--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
     "istream": "cpp",
     "*.tcc": "cpp",
     "limits": "cpp",
-    "type_traits": "cpp"
+    "type_traits": "cpp",
+    "ostream": "cpp"
   }
 }
