--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,8 @@
     "*.tcc": "cpp",
     "limits": "cpp",
     "type_traits": "cpp",
-    "ostream": "cpp"
+    "ostream": "cpp",
+    "filesystem": "cpp"
   },
   "C_Cpp.errorSquiggles": "Disabled"
 }
