first step erase!

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@ inheritance/AbstractGeometry/.vs/AbstractGeometry/v17/Browse.VC.opendb
 /ForwardList/x64/Debug
 /DataContainers/.vs/DataContainers
 /DataContainers/x64/Debug
+test/.vs/test/v17/ipch/AutoPCH/786ce8b3dfe019f/TEST.ipch
+test/.vs/test/v17/Browse.VC.db
+test/.vs/test/v17/Browse.VC.db-shm
+test/.vs/test/v17/Browse.VC.db-wal
+test/.vs/test/v17/Browse.VC.opendb
