--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -43,7 +43,11 @@
     "xstddef": "cpp",
     "xstring": "cpp",
     "xtr1common": "cpp",
-    "xutility": "cpp"
+    "xutility": "cpp",
+    "vector": "cpp",
+    "array": "cpp",
+    "list": "cpp",
+    "forward_list": "cpp"
   },
   "C_Cpp.errorSquiggles": "Disabled"
 }
