--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
   "files.associations": {
-    "iostream": "cpp",
-    "ostream": "cpp",
+    "xstring": "cpp",
+    "string": "cpp",
+    "array": "cpp",
     "atomic": "cpp",
     "bit": "cpp",
     "cctype": "cpp",
@@ -16,24 +17,31 @@
     "cstring": "cpp",
     "ctime": "cpp",
     "cwchar": "cpp",
+    "deque": "cpp",
     "exception": "cpp",
+    "forward_list": "cpp",
     "fstream": "cpp",
     "initializer_list": "cpp",
     "ios": "cpp",
     "iosfwd": "cpp",
+    "iostream": "cpp",
     "istream": "cpp",
     "iterator": "cpp",
     "limits": "cpp",
+    "list": "cpp",
+    "map": "cpp",
     "memory": "cpp",
     "new": "cpp",
+    "ostream": "cpp",
+    "set": "cpp",
     "stdexcept": "cpp",
     "streambuf": "cpp",
-    "string": "cpp",
     "system_error": "cpp",
     "tuple": "cpp",
     "type_traits": "cpp",
     "typeinfo": "cpp",
     "utility": "cpp",
+    "vector": "cpp",
     "xfacet": "cpp",
     "xiosbase": "cpp",
     "xlocale": "cpp",
@@ -41,17 +49,38 @@
     "xlocnum": "cpp",
     "xmemory": "cpp",
     "xstddef": "cpp",
-    "xstring": "cpp",
     "xtr1common": "cpp",
+    "xtree": "cpp",
     "xutility": "cpp",
-    "vector": "cpp",
-    "array": "cpp",
-    "list": "cpp",
-    "forward_list": "cpp",
-    "set": "cpp",
-    "deque": "cpp",
-    "map": "cpp",
-    "xtree": "cpp"
+    "*.tcc": "cpp"
   },
-  "C_Cpp.errorSquiggles": "Disabled"
+  "C_Cpp.errorSquiggles": "Disabled",
+  "C_Cpp_Runner.cCompilerPath": "C:/MinGW/bin/gcc.exe",
+  "C_Cpp_Runner.cppCompilerPath": "C:/MinGW/bin/g++.exe",
+  "C_Cpp_Runner.debuggerPath": "C:/MinGW/bin/gdb.exe",
+  "C_Cpp_Runner.cStandard": "",
+  "C_Cpp_Runner.cppStandard": "",
+  "C_Cpp_Runner.msvcBatchPath": "",
+  "C_Cpp_Runner.warnings": [
+    "-Wall",
+    "-Wextra",
+    "-Wpedantic"
+  ],
+  "C_Cpp_Runner.enableWarnings": true,
+  "C_Cpp_Runner.warningsAsError": false,
+  "C_Cpp_Runner.compilerArgs": [],
+  "C_Cpp_Runner.linkerArgs": [],
+  "C_Cpp_Runner.includePaths": [],
+  "C_Cpp_Runner.includeSearch": [
+    "*",
+    "**/*"
+  ],
+  "C_Cpp_Runner.excludeSearch": [
+    "**/build",
+    "**/build/**",
+    "**/.*",
+    "**/.*/**",
+    "**/.vscode",
+    "**/.vscode/**"
+  ]
 }
