--- a/WinApi/WinApi.vcxproj
+++ b/WinApi/WinApi.vcxproj
@@ -147,6 +147,9 @@
   <ItemGroup>
     <ResourceCompile Include="Resource.rc" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="sunny_sun_cloud_weather_cloudy_icon_194237.ico" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
