--- a/WinApi/Resource.rc
+++ b/WinApi/Resource.rc
@@ -59,19 +59,22 @@ BEGIN
     PUSHBUTTON      "Cancel",IDCANCEL,205,80,50,14
 END
 
-ID_CLOGIN DIALOGEX 120, 120, 241, 121
+ID_CLOGIN DIALOGEX 120, 120, 319, 178
 STYLE DS_SYSMODAL | DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | DS_CENTER | WS_CAPTION | WS_SYSMENU
 CAPTION "Hello WinAPI"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    PUSHBUTTON      "OK",IDOK,133,103,47,15
-    PUSHBUTTON      "E&xit",IDCANCEL,184,103,50,16
-    EDITTEXT        IDC_LOGIN1,6,30,227,14,ES_CENTER | ES_AUTOHSCROLL,WS_EX_ACCEPTFILES
-    LTEXT           "Login:",IDC_STATICLOGIN,6,18,36,8
-    EDITTEXT        IDC_LOGIN2,6,66,228,14,ES_CENTER | ES_AUTOHSCROLL
-    LTEXT           "Password:",IDC_STATICPASSWORD,6,54,34,8
-    PUSHBUTTON      "Copy",IDC_COPYBUTTON,6,102,50,14
-    PUSHBUTTON      "Set Title",IDC_SET_TITLE_BUTTON,60,102,50,14
+    PUSHBUTTON      "OK",IDOK,211,146,47,15
+    PUSHBUTTON      "E&xit",IDCANCEL,262,145,50,16
+    EDITTEXT        IDC_LOGIN1,45,31,227,14,ES_CENTER | ES_AUTOHSCROLL,WS_EX_ACCEPTFILES
+    LTEXT           "Login:",IDC_STATICLOGIN,45,21,36,8
+    EDITTEXT        IDC_LOGIN2,45,66,228,14,ES_CENTER | ES_AUTOHSCROLL
+    LTEXT           "Password:",IDC_STATICPASSWORD,45,54,34,8
+    PUSHBUTTON      "Copy",IDC_COPYBUTTON,14,148,50,14
+    PUSHBUTTON      "Set Title",IDC_SET_TITLE_BUTTON,71,148,50,14
+    PUSHBUTTON      "Login",IDC_BUTTONLOGIN,45,87,50,14
+    PUSHBUTTON      "SignIn",IDC_BUTTONSIGNIN,224,87,50,14
+    CTEXT           "",IDC_STATICTEXTALERT,114,106,93,15,SS_CENTERIMAGE
 END
 
 
@@ -93,8 +96,9 @@ BEGIN
     ID_CLOGIN, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 234
+        RIGHTMARGIN, 312
         TOPMARGIN, 13
+        BOTTOMMARGIN, 169
     END
 END
 #endif    // APSTUDIO_INVOKED
