--- a/ListBox/Resource.rc
+++ b/ListBox/Resource.rc
@@ -50,14 +50,14 @@ END
 // Dialog
 //
 
-IDD_DIALOG1 DIALOGEX 0, 0, 305, 163
-STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+IDD_DIALOG1 DIALOGEX 0, 0, 301, 127
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "ListBox"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,198,142,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,248,142,50,14
-    LISTBOX         IDC_LIST1,7,7,291,131,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    DEFPUSHBUTTON   "OK",IDOK,193,106,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,244,106,50,14
+    LISTBOX         IDC_LIST1,7,7,287,86,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
 END
 
 
@@ -72,9 +72,9 @@ BEGIN
     IDD_DIALOG1, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 298
+        RIGHTMARGIN, 294
         TOPMARGIN, 7
-        BOTTOMMARGIN, 156
+        BOTTOMMARGIN, 120
     END
 END
 #endif    // APSTUDIO_INVOKED
